# sensirion_slf3s

./: LICENSE  README.md  base_classes.py  example_script.py  index.html  pyproject.toml  requirements.txt  sensirion_slf3s.py
.github/workflows/: docs.yml
src/sensirion_slf3s/: __init__.py  base_classes.py  sensirion_slf3s.py
src/sensirion_slf3s_tnaegele/: __init__.py
